# operators

./: .gitmodules  CMakeLists.txt  readme.md
include/operators/: arrow.hpp  arrow_star.hpp  binary_minus.hpp  bracket.hpp  compound_assignment.hpp  forward.hpp  increment_decrement.hpp  operators.hpp  returns.hpp  unary_minus.hpp  unary_plus.hpp
source/operators/: arrow.cpp  arrow_star.cpp  binary_minus.cpp  bracket.cpp  bracket_impl.cpp  compound_assignment.cpp  compound_assignment_test.cpp  forward.cpp  increment_decrement.cpp  operators.cpp  returns.cpp  unary_minus.cpp  unary_plus.cpp
source/operators/arrow_impl/: addressof_wrapper.cpp  arrow_impl.cpp  arrow_proxy_value.cpp  cast_self.cpp  indirect.cpp
